# sudoku-solver

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
assets/: sw.js
src/: main.rs  solver.rs  square.rs
