[package]
name = "sudoku-solver"
version = "1.0.0"
authors = ["cameron <me@cameron.rs>"]
edition = "2021"
description = "Program to solve sudoku board"

[dependencies]
eframe = "0.21.0"
catppuccin-egui = "2.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2